tests/negative/comptime_int_overflow.far
constexpr OVER = comptime 9223372036854775807 + 1

fun main() -> i64 {
  return OVER
}
